# ocaml-hwloc

./: .gitmodules  README.md  dune-project  hwloc.opam
example/: dune  main.ml
src/c/: dune  function_description.ml  type_description.ml
src/c/hwloc/: dune
src/c/hwloc/autogen/: dune
src/lib/: dune  hwloc.ml
