(library
 (name hwloc_c)
 (public_name hwloc.c)
 (install_c_headers
  hwloc
  config
  rename
  bitmap
  helper
  inlines
  diff
  deprecated)
 (library_flags -linkall)
 (foreign_archives hwloc)
 (flags
  (:standard -w -9-27))
 (ctypes
  (external_library_name hwloc)
  (build_flags_resolver
   (vendored
    (c_flags
     :standard
     -I
     ./src/c
     -I
     .
     -I
     ./src/c/hwloc
     -I
     ./src/c/hwloc/autogen)
    (c_library_flags :standard)))
  (deps
   hwloc.h
   hwloc/autogen/config.h
   hwloc/rename.h
   hwloc/bitmap.h
   hwloc/helper.h
   hwloc/inlines.h
   hwloc/diff.h
   hwloc/deprecated.h)
  (headers
   (include "hwloc.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

; https://github.com/ocaml/dune/issues/4948 ergh...

(install
 (section stublibs)
 (files
  (dllhwloc.so as libhwloc.so)
  (dllhwloc.so as libhwloc.so.5)
  (dllhwloc.so as libhwloc.so.5.7.10)))

(rule
 (deps
  (source_tree %{project_root}/vendor/hwloc))
 (targets
  libhwloc.a
  dllhwloc.so
  hwloc.h
  config.h
  rename.h
  bitmap.h
  helper.h
  inlines.h
  diff.h
  deprecated.h)
 (enabled_if
  (= %{system} macosx))
 (action
  (no-infer
   (progn
    (chdir
     %{project_root}/vendor/hwloc
     (progn
      (run autoreconf -i)
      (run mkdir -p install)
      (setenv
       CFLAGS
       "%{ocaml-config:ocamlc_cflags}"
       (progn
        (run
         ./configure
         --enable-static
         --disable-libudev
         --disable-libxml2
         --disable-opencl
         --disable-libnuma)
        (run make -j)))))
    (copy %{project_root}/vendor/hwloc/include/hwloc.h hwloc.h)
    (copy %{project_root}/vendor/hwloc/include/hwloc/rename.h rename.h)
    (copy %{project_root}/vendor/hwloc/include/hwloc/bitmap.h bitmap.h)
    (copy %{project_root}/vendor/hwloc/include/hwloc/helper.h helper.h)
    (copy %{project_root}/vendor/hwloc/include/hwloc/inlines.h inlines.h)
    (copy %{project_root}/vendor/hwloc/include/hwloc/diff.h diff.h)
    (copy
     %{project_root}/vendor/hwloc/include/hwloc/deprecated.h
     deprecated.h)
    (copy
     %{project_root}/vendor/hwloc/include/hwloc/autogen/config.h
     config.h)
    (copy %{project_root}/vendor/hwloc/src/.libs/libhwloc.a libhwloc.a)
    (copy %{project_root}/vendor/hwloc/src/.libs/libhwloc.dylib dllhwloc.so)))))

(rule
 (deps
  (source_tree %{project_root}/vendor/hwloc))
 (enabled_if
  (<> %{system} macosx))
 (targets
  libhwloc.a
  dllhwloc.so
  hwloc.h
  config.h
  rename.h
  bitmap.h
  helper.h
  inlines.h
  diff.h
  deprecated.h)
 (action
  (no-infer
   (progn
    (chdir
     %{project_root}/vendor/hwloc
     (progn
      (run autoreconf -i)
      (run mkdir -p install)
      (run
       ./configure
       --enable-static
       --disable-libudev
       --disable-libxml2
       --disable-opencl
       --disable-libnuma)
      (setenv
       CFLAGS
       "%{ocaml-config:ocamlc_cflags}"
       (progn
        (run
         ./configure
         --enable-static
         --disable-libudev
         --disable-libxml2
         --disable-opencl
         --disable-libnuma)
        (run make -j)))))
    (copy %{project_root}/vendor/hwloc/include/hwloc.h hwloc.h)
    (copy %{project_root}/vendor/hwloc/include/hwloc/rename.h rename.h)
    (copy %{project_root}/vendor/hwloc/include/hwloc/bitmap.h bitmap.h)
    (copy %{project_root}/vendor/hwloc/include/hwloc/helper.h helper.h)
    (copy %{project_root}/vendor/hwloc/include/hwloc/inlines.h inlines.h)
    (copy %{project_root}/vendor/hwloc/include/hwloc/diff.h diff.h)
    (copy
     %{project_root}/vendor/hwloc/include/hwloc/deprecated.h
     deprecated.h)
    (copy
     %{project_root}/vendor/hwloc/include/hwloc/autogen/config.h
     config.h)
    (copy
     %{project_root}/vendor/hwloc/src/.libs/libhwloc%{ext_lib}
     libhwloc.a)
    (copy
     %{project_root}/vendor/hwloc/src/.libs/libhwloc%{ext_dll}
     dllhwloc.so)))))
